fixed wrong padding of main message and menu item forms

--- a/web-client/src/components/MainMessageForm/MainMessageForm.scss
+++ b/web-client/src/components/MainMessageForm/MainMessageForm.scss
@@ -1,6 +1,4 @@
 .MainMessageForm {
-  padding-right: 20px;
-
   .divider {
     margin-top: 20px;
   }
